--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,10 @@
         android:theme="@style/Theme.ChildMath"
         tools:targetApi="31">
         <activity
+            android:name=".Capitals"
+            android:exported="false"
+            android:screenOrientation="nosensor" />
+        <activity
             android:name=".LesserGreater"
             android:exported="false"
             android:screenOrientation="nosensor" />
